force-app/main/default/objects/Webinar__c/fields/Auto_Register__c.field-meta.xml
<CustomField>
    <fullName>Auto_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Register</label>
    <type>Checkbox</type>
</CustomField>