force-app/main/default/objects/Webinar__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>TextArea</type>
</CustomField>