force-app/main/default/objects/Webinar__c/fields/Type_Of_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Webinar__c</fullName>
    <label>Type Of Webinar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>