force-app/main/default/objects/Webinar__c/fields/Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Id__c</fullName>
    <label>Webinar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>