force-app/main/default/objects/Webinar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Webinar_Id__c</columns>
    <columns>Topic__c</columns>
    <columns>IsActive__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>